# uefi-driver-example

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  build.rs  module.inf  rust-toolchain.toml
.cargo/: config.toml
src/: binding.rs  component.rs  main.rs
